fix: Add proper right-spacing to alert bell

--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -736,7 +736,7 @@ a:focus {
 
 #chat-title > div > #message-search {
     position: absolute;
-    right: 30px;
+    right: 40px;
     top: 12px;
     cursor: pointer;
     color: #AAAAAA;
@@ -753,7 +753,7 @@ a:focus {
 
 #chat-title > div > #alert-bell {
     position: absolute;
-    right: 0;
+    right: 10px;
     top: 12px;
     cursor: pointer;
     padding: 10px;
